@@ -198,6 +198,8 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1641: Incorrect counters in local mode (rding)
+
 PIG-1647: Logical simplifier throws a NPE (yanz)
 
 PIG-1642: Order by doesn't use estimation to determine the parallelism (rding)
